--- a/Day10.ipynb
+++ b/Day10.ipynb
@@ -92,8 +92,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b77b9530-213c-44a2-8a42-cb938bbe99c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if anagram or not\n",
+    "def is_anagram(s1, s2):\n",
+    "    # count length of s1\n",
+    "    count1 = 0\n",
+    "    for _ in s1:\n",
+    "        count1 += 1\n",
+    "\n",
+    "    # count length of s2\n",
+    "    count2 = 0\n",
+    "    for _ in s2:\n",
+    "        count2 += 1\n",
+    "\n",
+    "    # if lengths are not equal → not anagram\n",
+    "    if count1 != count2:\n",
+    "        return False\n",
+    "\n",
+    "    # check characters\n",
+    "    for i in s1:\n",
+    "        match = False\n",
+    "        for c in s2:\n",
+    "            if i == c:\n",
+    "                match = True\n",
+    "                break\n",
+    "        if not match:\n",
+    "            return False\n",
+    "\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "# Test\n",
+    "print(is_anagram(\"listen\", \"silent\"))   # True\n",
+    "print(is_anagram(\"hello\", \"python\"))    # False\n",
+    "print(is_anagram(\"care\", \"race\"))       # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "000addc9-698f-487b-97cd-4de01874fc77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "##anagram simple way\n",
+    "def is_anagram(s1, s2):\n",
+    "    c1 = c2= 0\n",
+    "    for _ in s1: c1 += 1\n",
+    "    for _ in s2: c2 += 1\n",
+    "    if c1 != c2: return False\n",
+    "    for i in s1:\n",
+    "        f = 0\n",
+    "    for j in s2:\n",
+    "        if i == j: f = 1; \n",
+    "        break\n",
+    "        if f == 0: return False\n",
+    "    return True\n",
+    "print(is_anagram(\"listen\", \"silent\"))\n",
+    "print(is_anagram(\"hello\", \"python\"))\n",
+    "print(is_anagram(\"heart\", \"earth\"))\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa9099b2-d61f-4d11-b6a3-88b018789501",
    "metadata": {},
    "outputs": [],
    "source": []
